--- a/Freight/Views/Calculator/Index.cshtml
+++ b/Freight/Views/Calculator/Index.cshtml
@@ -40,33 +40,33 @@
 @Html.Partial("~/Views/_Header.cshtml")
 @section sidebar{
     <div class="nav-side-menu">
-        <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+        <i class="fa fa-lg fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
 
         <div class="menu-list">
 
             <ul id="menu-content" class="menu-content collapse out">
                 <a href="/UAT/Freight_Wireframe/Calculator/Index" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#products" class="collapsed active">
-                    <i class="fa fa-dashboard fa-lg" style="padding-right:10px"></i>
+                    <i class="fa fa-lg fa-dashboard fa-lg" style="padding-right:10px"></i>
                     Calculator
                 </li>
 
                 </a>
                 <a href="/UAT/Freight_Wireframe/UploadRate/Index" style="text-decoration:none">
-                <li data-toggle="collapse" data-target="#new" id="uprate" class="collapsed">
-                    <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
-                    Upload rate
-                </li>
+                    <li data-toggle="collapse" data-target="#new" id="uprate" class="collapsed">
+                        <i class="fa fa-lg fa-upload" style="padding-right:8px"></i>
+                        Upload rate
+                    </li>
                 </a>
                 <a href="/UAT/Freight_Wireframe/SurchargeRate/Index" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#new" id="surrate" class="collapsed">
-                    <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
+                    <i class="fa fa-lg fa-caret-up" style="padding-right:8px"></i>
                     Surcharge Rate
                 </li>
                 </a>
                  <a href="/UAT/Freight_Wireframe/Home/AssignRole" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#new" id="asrole" class="collapsed">
-                    <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
+                    <i class="fa fa-lg fa-user" style="padding-right:8px"></i>
                     User
                 </li>
                 </a>
