--- a/Freight/Views/SurchargeRate/Index.cshtml
+++ b/Freight/Views/SurchargeRate/Index.cshtml
@@ -21,16 +21,16 @@
 
                 </a>
                 <a href="/UAT/Freight_Wireframe/UploadRate/Index" style="text-decoration:none">
-                <li data-toggle="collapse" data-target="#new" class="collapsed">
-                    <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
-                    Upload rate
-                </li>
+                    <li data-toggle="collapse" data-target="#new" class="collapsed">
+                        <i class="fa fa-upload" style="padding-right:8px"></i>
+                        Upload rate
+                    </li>
                 </a>
                 <a href="/UAT/Freight_Wireframe/SurchargeRate/Index" style="text-decoration:none">
-                <li data-toggle="collapse" data-target="#new" class="collapsed active">
-                    <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
-                    Surcharge Rate
-                </li>
+                    <li data-toggle="collapse" data-target="#new" class="collapsed active">
+                        <i class="fa fa-caret-up" style="padding-right:8px"></i>
+                        Surcharge Rate
+                    </li>
                 </a>
                 <a href="/UAT/Freight_Wireframe/Home/AssignRole" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#new" id="asrole" class="collapsed">
@@ -51,11 +51,11 @@
                     <div class="col-xs-6 col-md-6" style="margin-top: 15px; ">
                         <label class="col-md-12 row">Year</label>
                         <select class="form-select form-control-lg mb-5 col-md-9" id="carrierSelect">
-                            <option value="2017">2017</option>
-                            <option value="2018">2018</option>
-                            <option value="2019">2019</option>
-                            <option value="2020">2020</option>
                             <option selected value="2021">2021</option>
+                            <option value="2017">2022</option>
+                            <option value="2018">2023</option>
+                            <option value="2019">2024</option>
+                            <option value="2020">2025</option>
                         </select>
                     </div>
                 </div>
