--- a/Freight/Views/SurchargeRate/Index.cshtml
+++ b/Freight/Views/SurchargeRate/Index.cshtml
@@ -8,33 +8,33 @@
 @Html.Partial("~/Views/_Header.cshtml")
 @section sidebar{
     <div class="nav-side-menu">
-        <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+        <i class="fa fa-lg fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
 
         <div class="menu-list">
 
             <ul id="menu-content" class="menu-content collapse out">
                 <a href="/UAT/Freight_Wireframe/Calculator/Index" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#products" class="collapsed">
-                    <i class="fa fa-dashboard fa-lg" style="padding-right:10px"></i>
+                    <i class="fa fa-lg fa-dashboard fa-lg" style="padding-right:10px"></i>
                     Calculator
                 </li>
 
                 </a>
                 <a href="/UAT/Freight_Wireframe/UploadRate/Index" style="text-decoration:none">
                     <li data-toggle="collapse" data-target="#new" class="collapsed">
-                        <i class="fa fa-upload" style="padding-right:8px"></i>
+                        <i class="fa fa-lg fa-upload" style="padding-right:8px"></i>
                         Upload rate
                     </li>
                 </a>
                 <a href="/UAT/Freight_Wireframe/SurchargeRate/Index" style="text-decoration:none">
                     <li data-toggle="collapse" data-target="#new" class="collapsed active">
-                        <i class="fa fa-caret-up" style="padding-right:8px"></i>
+                        <i class="fa fa-lg fa-caret-up" style="padding-right:8px"></i>
                         Surcharge Rate
                     </li>
                 </a>
                 <a href="/UAT/Freight_Wireframe/Home/AssignRole" style="text-decoration:none">
                 <li data-toggle="collapse" data-target="#new" id="asrole" class="collapsed">
-                    <i class="fa fa-car fa-lg" style="padding-right:8px"></i>
+                    <i class="fa fa-lg fa-user" style="padding-right:8px"></i>
                     User
                 </li>
                 </a>
@@ -51,11 +51,13 @@
                     <div class="col-xs-6 col-md-6" style="margin-top: 15px; ">
                         <label class="col-md-12 row">Year</label>
                         <select class="form-select form-control-lg mb-5 col-md-9" id="carrierSelect">
+                            <option value="2019">2019</option>
+                            <option value="2020">2020</option>
                             <option selected value="2021">2021</option>
-                            <option value="2017">2022</option>
-                            <option value="2018">2023</option>
-                            <option value="2019">2024</option>
-                            <option value="2020">2025</option>
+                            <option value="2022">2022</option>
+                            <option value="2023">2023</option>
+                            <option value="2024">2024</option>
+                            <option value="2025">2025</option>
                         </select>
                     </div>
                 </div>
