--- a/Freight/Content/Site.css
+++ b/Freight/Content/Site.css
@@ -18,9 +18,4 @@
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
+.form-group {margin-left: 15px; margin-right: 15px}
