--- a/Freight/Style/login.css
+++ b/Freight/Style/login.css
@@ -83,8 +83,10 @@ h2 {
     text-align: center;
 
 }
-
-#formFooter {
+    #formContent label {
+        text-align: left;
+    }
+    #formFooter {
     background-color: #f6f6f6;
     border-top: 1px solid #dce8f1;
     padding: 25px;
@@ -148,13 +150,13 @@ input[type=text] {
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
-    padding: 15px 32px;
-    text-align: center;
+    padding: 10px;
+    text-align: left;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     font-size: 16px;
-    margin: 5px;
-    width: 85%;
+    margin: 0 auto;
+    width: 100%;
     border: 2px solid #f6f6f6;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
