--- a/Freight/Views/Home/SignUp.cshtml
+++ b/Freight/Views/Home/SignUp.cshtml
@@ -11,16 +11,21 @@
         <hr role="separator" aria-orientation="horizontal" class="my-8 v-divider theme--light">
         <form>
             <div class="form-group">
-                <label style="width:380px">Your Name</label>
+                <label style="width:100%">Your Name</label>
                 <input type="text" class="form-group" id="exampleInputName1" placeholder="Your Name" />
             </div>
             <div class="form-group">
-                <label style="width:380px">Email</label>
-                <input type="text" class="form-group" id="exampleInputEmail1" placeholder="Email" />
+                <label style="width:100%">Email</label>
+                <input type="text" class="form-group" id="exampleInputEmail1" placeholder="Mentor Reference's Email" />
+                <span id="ReferenceDomain" style="        position: relative;
+        float: right;
+        top: -34px;
+        right: 5px;
+">&#64;mentormedia.com</span>
             </div>
             <div class="form-group">
-                <label style="width: 380px;">Site Id</label>
-                <select id="selectSiteID" class="form-select form-control-lg mb-5" style="width:380px">
+                <label style="width: 100%;">Site Id</label>
+                <select id="selectSiteID" class="form-select form-control-lg" style="width:100%">
                     <option>MMCA</option>
                     <option>MMCD</option>
                     <option>MMCN</option>
