--- a/Freight/Views/Home/AssignRole.cshtml
+++ b/Freight/Views/Home/AssignRole.cshtml
@@ -93,7 +93,7 @@
                         <label class="col-md-12 row">Status</label>
                         <select id="active1" class="form-select form-control-lg mb-5 col-md-9">
                             <option value="Pending">Pending</option>
-                            <option value="Active">Active</option>
+                            <option value="Active">Approved</option>
                             <option value="Inactive">Inactive</option>
                         </select>
                     </div>
