--- a/Freight/Views/Home/AssignRole.cshtml
+++ b/Freight/Views/Home/AssignRole.cshtml
@@ -86,7 +86,7 @@
                         <label class="col-md-12 row">Profile</label>
                         <select id="role" class="form-select form-control-lg mb-5 col-md-9">
                             <option value="System Administrator">System Administrator</option>
-                            <option value="Enquity">Enquity</option>
+                            <option value="Enquiry">Enquiry</option>
                         </select>
                     </div>
                     <div class="col-xs-4 col-md-4 " style="margin-top: 15px; ">
@@ -139,7 +139,7 @@
                                 <td id="user_2">test@gmail.com</td>
                                 <td id="name_2">test1</td>
                                 <td id="siteid_2">MMCA</td>
-                                <td id="role_2">Enquity</td>
+                                <td id="role_2">Enquiry</td>
                                 <td id="active_2">Active</td>
                                 <td><input value="Edit" class="record" type="button" onclick="Edit(2)" /></td>
                             </tr>
@@ -147,7 +147,7 @@
                                 <td id="user_3">test2@gmail.com</td>
                                 <td id="name_3">test2</td>
                                 <td id="siteid_3">MMCA</td>
-                                <td id="role_3">Enquity</td>
+                                <td id="role_3">Enquiry</td>
                                 <td id="active_3">Inactive</td>
                                 <td><input value="Edit" class="record" type="button" onclick="Edit(3)" /></td>
                             </tr>
@@ -155,7 +155,7 @@
                                 <td id="user_4">test3@gmail.com</td>
                                 <td id="name_4">test2</td>
                                 <td id="siteid_4">MMCA</td>
-                                <td id="role_4">Enquity</td>
+                                <td id="role_4">Enquiry</td>
                                 <td id="active_4">Pending</td>
                                 <td><input value="Edit" class="record" type="button" onclick="Edit(4)" /></td>
                             </tr>
@@ -163,13 +163,12 @@
                                 <td id="user_5">test4@gmail.com</td>
                                 <td id="name_5">test2</td>
                                 <td id="siteid_5">MMCA</td>
-                                <td id="role_5">Enquity</td>
+                                <td id="role_5">Enquiry</td>
                                 <td id="active_5">Pending</td>
                                 <td><input value="Edit" class="record" type="button" onclick="Edit(5)" /></td>
                             </tr>
                         </tbody>
                     </table>
-                    <button onclick="location.href='/template-user.xlsx'" class="btn btn-primary btn-lg" role="button" type="button">Export</button>
                 </div>
                 </div>
                 <div>
