--- a/Freight/Views/Home/SignUp.cshtml
+++ b/Freight/Views/Home/SignUp.cshtml
@@ -7,6 +7,9 @@
     <div id="formContent">
         <div class="fadeIn first" style="margin-top:30px">
             <img src="https://ebiz5-staging.mentormedia.com/RFID-WIREFRAME/_nuxt/img/logo.9b9a022.png" id="icon" alt="User Icon" />
+            <h3 style="margin-top: 10px;">
+                MENTOR MEDIA FREIGHT PORTAL
+            </h3>
         </div>
         <hr role="separator" aria-orientation="horizontal" class="my-8 v-divider theme--light">
         <form>
