--- a/Freight/Content/Site.css
+++ b/Freight/Content/Site.css
@@ -18,4 +18,31 @@
     white-space: normal;
 }
 
-.form-group {margin-left: 15px; margin-right: 15px}
+.form-group {
+    margin-left: 15px;
+    margin-right: 15px
+}
+
+.btn.btn-primary {
+    background: #008aab;
+}
+
+h3 {
+    background: #008aab;
+    color: #fff;
+    padding: 10px;
+    max-width: 100%;
+    display: block;
+}
+
+.no-marrgin {
+    margin: 0
+}
+
+.no-padding {
+    padding: 0
+}
+
+.hasbg {
+    /*background-color: #2e353d;*/
+}
