--- a/Freight/Views/Home/Index.cshtml
+++ b/Freight/Views/Home/Index.cshtml
@@ -6,6 +6,9 @@
     <div id="formContent">
         <div class="fadeIn first" style="margin-top:30px">
             <img src="https://ebiz5-staging.mentormedia.com/RFID-WIREFRAME/_nuxt/img/logo.9b9a022.png" id="icon" alt="User Icon" />
+            <h3 style="margin-top: 10px;">
+                MENTOR MEDIA FREIGHT PORTAL
+            </h3>
         </div>
         <hr role="separator" aria-orientation="horizontal" class="my-8 v-divider theme--light">
         <form action="/Home/Index" method="post" enctype="multipart/form-data">
@@ -16,7 +19,7 @@
 
             <div id="formFooter" style="margin-top:20px">
             </div>
-</div>
+    </div>
 </div>
 <script>
     $("#submitButton").click(function () {
