--- a/Freight/Views/Shared/_Layout.cshtml
+++ b/Freight/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="row">
-        <div class="col-2">
+    <div class="row no-marrgin">
+        <div class="col-2 no-padding hasbg">
             @RenderSection("sidebar", required: false)
         </div>
         <div class="col-10" style="font-size: 1.5rem; margin-top: 5%; justify-content: center; width: 1600px">
